--- a/partials/about.html
+++ b/partials/about.html
@@ -1,5 +1,5 @@
 <!-- About Us Section -->
-    <section class="about section">
+    <section class="about section" id="about-placeholder">
       <div class="container about-container">
         <div class="about-image-block">
           <img
