--- a/partials/footer.html
+++ b/partials/footer.html
@@ -26,7 +26,7 @@
       <h3>Quick Links</h3>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="under_construction.html">About Us</a></li>
+        <li><a href="index.html#about-placeholder">About Us</a></li>
         <li><a href="under_construction.html">Services</a></li>
         <li><a href="under_construction.html">Contact</a></li>
       </ul>
