--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -11,7 +11,7 @@
     <ul class="nav-list">
       <li><a href="index.html" class="nav-link active">Home</a></li>
       <li>
-        <a href="under_construction.html" class="nav-link">About</a>
+        <a href="index.html#about-placeholder" class="nav-link">About</a>
       </li>
       <li>
         <a href="under_construction.html" class="nav-link">Courses</a>
